<resources>
    <string name="app_name">Cómo Como</string>
    <string name="titulo">Como Como</string>
    <string name="username">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="passwordConfirm">Repita la contraseña</string>
    <string name="next">Siguiente</string>
    <string name="cancel">Cancelar</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="introduce">Introduce los siguientes datos</string>
    <string name="crearcuenta">Completa los campos</string>
    <string name="email">Email</string>
    <string name="search_title">Buscar</string>
    <string name="filter">Filtrar</string>

    <string name="hello">Bienvenid@</string>


    <string name="text_label_1">Inicio</string>
    <string name="text_label_2">Recetas</string>
    <string name="text_label_3">Menú</string>
    <string name="text_label_4">Favoritos</string>
    <string name="text_label_5">Perfil</string>


    <string name="product_title">Nombre de la receta</string>
    <string name="product_description">Descripcion de la receta</string>
    <string name="product_ingredients">Ingredintes de la receta</string>
    <string name="product_preparacion">Preparación de la receta</string>

    <string name="fav">Favorita</string>
    <string name="menu_add">Añadir a menú</string>
    <string name="delete">Eliminar receta</string>
    <string name="edit">Editar receta</string>

    <string name="misRecetas">Mis Recetas</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="eliminarUsuarios">Eliminar Usuarios</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="subirReceta">Subir Receta</string>
    <string name="editarReceta">Editar Receta</string>
    <string name="eliminarReceta">Eliminar Receta</string>
    <string name="actualizarReceta">Actualizar Receta</string>

</resources>