<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/BackgroundReceta"
    >
    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_favorite"
        android:title="@string/fav"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        />

</menu>